@@ -1,8 +1,8 @@
 Package: DiffBind
 Type: Package
-Version: 1.8.3
+Version: 1.8.4
 Title: Differential Binding Analysis of ChIP-Seq peak data
-Date: 2013-11-14
+Date: 2014-02-19
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gordon Brown <gordon.brown@cruk.cam.ac.uk>
 Maintainer: Rory Stark<rory.stark@cruk.cam.ac.uk>
 Description: Compute differentially bound sites from multiple ChIP-seq experiments using affinity (quantitative) data. Also enables occupancy (overlap) analysis and plotting functions.
